--- a/src/index.css
+++ b/src/index.css
@@ -23,18 +23,23 @@ code {
 
 .input {
   text-align:center;
-  border: 1px solid black;
+  /* border: 1px solid black; */
   height: 300px;
 }
 .input-group{
   width: 40% !important;
   margin-top: 50px;
-  margin-left: 100px;
+  margin-left: 300px;
   text-align: center;
   display: inline;
 
 
 }
+/* .todo{
+  margin-left: 100px;
+} */
+
+
 /* .btn{
   width: 10%;
   margin-top: -80px !important;
@@ -46,7 +51,7 @@ code {
 } */
 .Buttons{
   margin-top: -45px;
-  margin-left: 800px;
+  margin-left: 700px;
   /* width: 100px; */
   /* border: 1px solid black */
 }
